<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".registerForm"
    android:background="@drawable/back">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/registerlbl"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLength="12"
        android:minHeight="70dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UN"
            android:layout_width="263dp"
            android:layout_height="53dp"
            android:layout_marginStart="8dp"
            android:hint="@string/username"
            android:minHeight="70dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLength="12"
        android:minHeight="70dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="258dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:hint="@string/password"
            android:minHeight="70dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progessBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/registerbtn" />

    <TextView
        android:id="@+id/backLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/click_to_login"
        android:textSize="20sp"
        android:textStyle="italic" />

</LinearLayout>